# kanso

./: .gitignore  CLAUDE.md  Cargo.toml  GAVELS.md  HN_DRAFT.md  Makefile  README.md  chain  go.mod  go.sum  imports  index_missing  index_missing.ll  kanso-spec.md  lazybench  main.go
ast/: ast.go  ast_test.go
bench/: .gitignore  RESULTS.md  cost_golden.txt  cost_golden_encode.txt  fib.kso  gobench  kq_race.sh  lazy_rust.rs  lazy_rust_bin  lazy_rust_opt.rs  lazy_rust_opt_bin  lazybench.kso  main.go  make_jsonbench.sh
design/: build-blocks.md  compiler-log.md  dna.md  enumerable.md  err-migration.md  fixpoint.md  function-values.md  hako.md  import-incarnation-plan.md  lazy-v1-plan.md  memory-frontier-research.md  memory-model-committee.md  modules-plan.md  perceus-plan.md  performance-frontier.md  render-plan.md  speculation-engine.md  std-migration-plan.md  visibility.md  wasm-runtime.md  workahead-engine.md
docs/: CNAME  _config.yml  about.html  compiler.html  decisions.html  failure-kinds.html  flow.html  index.html  influences.html  kanso.wasm  lore.html  philosophy.html  play.js  playground.html  spec.html  style.css
editors/: README.md
examples/: ERC20.kal  build_cyclic_eq.kso  build_set_failure.kso  busy_token.ka  closures.kso  concurrency.kso  constants.kso  custom_render.kso  destructure.kso  dispatch.kso  dot_field_access.kso  effects.kso  erc20.ka  errors.kso  fanout.kso  fn_value.kso  fn_value_multiarg.kso  generators.kso  hello.kso  if_blocks.kso  imports.kso  indented_args.kso  indexing.kso  io_render.kso  join.kso  json_failure_door.kso  lists.kso  (+26 more)
(+736 files in other folders)
