[package]
name = "kanso"
version = "0.1.0"
edition = "2021"
description = "Reference interpreter for the kanso language"
license = "MIT"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"

# The interactive repl (rustyline) is native-only; the browser playground has
# no terminal, and rustyline's dependency tree does not build for wasm32.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "18.0.1"

[[bin]]
name = "kanso"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
